--- a/css/nicepages.css
+++ b/css/nicepages.css
@@ -360,7 +360,8 @@ span.fr-img-caption.fr-view {
       float: right;
       margin: 5px 0 5px 5px;
       max-width: calc(100% - 5px); }
-/*end-commonstyles library*/@charset "UTF-8";
+@charset "UTF-8";
+/*end-commonstyles library*/
 .u-hidden-block {
   visibility: hidden!important;
 }
@@ -493,6 +494,7 @@ button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
+  appearance: button;
   -webkit-appearance: button;
 }
 button::-moz-focus-inner,
@@ -21692,14 +21694,14 @@ a.pswp__share--download:hover {
   }
   to {
     transform-origin: center center;
-    transform: translate3d(-50% !important, -50% !important, 0);
+    transform: translate3d(-50%, -50%, 0);
     opacity: 1;
   }
 }
 @keyframes customAnimationOut {
   from {
     transform-origin: center center;
-    transform: translate3d(-50% !important, -50% !important, 0);
+    transform: translate3d(-50%, -50%, 0);
     opacity: 1;
   }
   to {
